Expand inventory update 2/11

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -133,6 +133,9 @@ button {
   text-decoration: none;
   color: var(--dark-grey);
 }
+.product-categories {
+  display: grid;
+}
 /* Styles for product lists */
 .product-card {
   flex: 1 1 45%;
