--- a/src/css/style.css
+++ b/src/css/style.css
@@ -169,6 +169,26 @@ button {
   width: 100%;
 }
 
+.product-grid {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-content: center;
+  text-align: center;
+}
+
+.product-grid a {
+  text-decoration: none;
+}
+
+.product-grid a:link {
+  color: black;
+}
+
+.product-grid a:visited {
+  color: gray;
+}
+
 /* Start cart list card styles */
 .cart-card {
   display: grid;
